--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "socket.io-client": "^3.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
