--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "socket.io-client": "^3.0.4"
   },
   "devDependencies": {
